...
        }
        ToolbarSpacer(.fixed, placement: .topBarTrailing)
        ToolbarItem(placement: .topBarTrailing) {
            Button {
                self.viewModel.save()
            } label: {
                Label("Save PDF", systemImage: "checkmark")
            }
            .buttonStyle(.glassProminent)
            .tint(ColorPalette.accent)
            .keyboardShortcut("s", modifiers: [.command])
        }
    }
...
